[package]
name = "market-data-quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
isin = "0.1.18"
pcap = "2.0.0"
pcap-parser = { version = "0.15.0", features = ["serialize"] }
rayon = "1.10.0"
