[package]
name = "market-data-quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
pcap = "2.0.0"
rayon = "1.10.0"
